# bgfx.cmake

./: CMakeLists.txt
brtshaderc/: CMakeLists.txt  brtshaderc.cpp  brtshaderc.h  shaderc.cpp  shaderc.h  shaderclib.cpp  writer.h
